load("@gazelle//:def.bzl", "gazelle")
load("@rules_pkg//:pkg.bzl", "pkg_deb", "pkg_tar")

# gazelle:go_naming_convention_external import
# gazelle:prefix github.com/buildbarn/bb-clientd
# gazelle:resolve go github.com/bazelbuild/remote-apis/build/bazel/remote/execution/v2 @bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto
# gazelle:resolve proto go pkg/proto/configuration/blobstore/blobstore.proto @com_github_buildbarn_bb_storage//pkg/proto/configuration/blobstore
# gazelle:resolve proto go pkg/proto/configuration/builder/builder.proto @com_github_buildbarn_bb_storage//pkg/proto/configuration/builder
# gazelle:resolve proto go pkg/proto/configuration/cas/cas.proto @com_github_buildbarn_bb_remote_execution//pkg/proto/configuration/cas
# gazelle:resolve proto go pkg/proto/configuration/filesystem/filesystem.proto @com_github_buildbarn_bb_remote_execution//pkg/proto/configuration/filesystem
# gazelle:resolve proto go pkg/proto/configuration/filesystem/virtual/virtual.proto @com_github_buildbarn_bb_remote_execution//pkg/proto/configuration/filesystem/virtual
# gazelle:resolve proto go pkg/proto/configuration/global/global.proto @com_github_buildbarn_bb_storage//pkg/proto/configuration/global
# gazelle:resolve proto go pkg/proto/configuration/grpc/grpc.proto @com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc
# gazelle:resolve proto google/protobuf/duration.proto @protobuf//:duration_proto
# gazelle:resolve proto pkg/proto/configuration/blobstore/blobstore.proto @com_github_buildbarn_bb_storage//pkg/proto/configuration/blobstore:blobstore_proto
# gazelle:resolve proto pkg/proto/configuration/builder/builder.proto @com_github_buildbarn_bb_storage//pkg/proto/configuration/builder:builder_proto
# gazelle:resolve proto pkg/proto/configuration/cas/cas.proto @com_github_buildbarn_bb_remote_execution//pkg/proto/configuration/cas:cas_proto
# gazelle:resolve proto pkg/proto/configuration/filesystem/filesystem.proto @com_github_buildbarn_bb_remote_execution//pkg/proto/configuration/filesystem:filesystem_proto
# gazelle:resolve proto pkg/proto/configuration/filesystem/virtual/virtual.proto @com_github_buildbarn_bb_remote_execution//pkg/proto/configuration/filesystem/virtual:virtual_proto
# gazelle:resolve proto pkg/proto/configuration/global/global.proto @com_github_buildbarn_bb_storage//pkg/proto/configuration/global:global_proto
# gazelle:resolve proto pkg/proto/configuration/grpc/grpc.proto @com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc:grpc_proto
gazelle(
    name = "gazelle",
)

pkg_tar(
    name = "bb_clientd_deb_data",
    extension = "tar.gz",
    files = {
        "//cmd/bb_clientd": "/usr/bin/bb_clientd",
        ":configs/bb_clientd.jsonnet": "/usr/lib/bb_clientd/bb_clientd.jsonnet",
        ":configs/linux/launch_bb_clientd_linux.sh": "/usr/lib/bb_clientd/launch_bb_clientd_linux.sh",
        ":configs/linux/logind.conf": "/etc/systemd/logind.conf.d/bb_clientd.conf",
        ":configs/linux/systemd.service": "/usr/lib/systemd/user/bb_clientd.service",
    },
)

pkg_deb(
    name = "bb_clientd_deb",
    architecture = "amd64",
    data = ":bb_clientd_deb_data",
    depends = ["fuse"],
    description = "The Buildbarn client daemon",
    homepage = "https://github.com/buildbarn/bb-clientd",
    maintainer = "The Buildbarn team",
    package = "bb-clientd",
    postinst = "configs/linux/postinst.sh",
    version = "0.0.0",
)
