load("@com_github_buildbarn_bb_storage//tools:container.bzl", "container_push_official")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "bb_clientd_lib",
    srcs = [
        "global_directory_context.go",
        "global_file_context.go",
        "global_tree_context.go",
        "main.go",
    ],
    importpath = "github.com/buildbarn/bb-clientd/cmd/bb_clientd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/blobstore",
        "//pkg/cas",
        "//pkg/filesystem/fuse",
        "//pkg/outputpathpersistency",
        "//pkg/proto/configuration/bb_clientd",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_remote_execution//pkg/cas",
        "@com_github_buildbarn_bb_remote_execution//pkg/filesystem",
        "@com_github_buildbarn_bb_remote_execution//pkg/filesystem/fuse",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/remoteoutputservice",
        "@com_github_buildbarn_bb_storage//pkg/auth",
        "@com_github_buildbarn_bb_storage//pkg/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/configuration",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/grpcservers",
        "@com_github_buildbarn_bb_storage//pkg/builder",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/grpc",
        "@com_github_buildbarn_bb_storage//pkg/random",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_hanwen_go_fuse_v2//fuse",
        "@go_googleapis//google/bytestream:bytestream_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "bb_clientd",
    embed = [":bb_clientd_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "bb_clientd_test",
    srcs = [
        "global_directory_context_test.go",
        "global_file_context_test.go",
        "global_tree_context_test.go",
    ],
    deps = [
        ":bb_clientd_lib",
        "//internal/mock",
        "//pkg/cas",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_remote_execution//pkg/filesystem/fuse",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_golang_mock//gomock",
        "@com_github_hanwen_go_fuse_v2//fuse",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_image(
    name = "bb_clientd_container",
    embed = [":bb_clientd_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

container_push_official(
    name = "bb_clientd_container_push",
    component = "bb-clientd",
    image = ":bb_clientd_container",
)
